layout oluşturuldu ve css düzenlemeleri yapıldı

--- a/src/app/routes/auth/login-page/login-page.component.html
+++ b/src/app/routes/auth/login-page/login-page.component.html
@@ -1,2 +1,4 @@
-<p>login-page works!</p>
-<a routerLink="">Ana Sayfaya Git</a>
+<app-basic-layout>
+    <p>login-page works!</p>
+    <a routerLink="">Ana Sayfaya Git</a>
+</app-basic-layout>
