--- a/src/app/routes/home-page/home-page.component.html
+++ b/src/app/routes/home-page/home-page.component.html
@@ -1,3 +1,5 @@
-<p>home-page works!</p>
-<!-- <a routerLink="auth/login">Go To Login</a> Tekrar Yükleme Yapıyor -->
-<a routerLink="auth/login">Go To Login</a>
+<app-basic-layout>
+    <p>home-page works!</p>
+    <!-- <a routerLink="auth/login">Go To Login</a> Tekrar Yükleme Yapıyor -->
+    <a routerLink="auth/login">Go To Login</a>
+</app-basic-layout>
