list-group-component eklendi. Input yapısı eklendi.

--- a/src/app/routes/home-page/home-page.component.html
+++ b/src/app/routes/home-page/home-page.component.html
@@ -1,5 +1,16 @@
 <app-basic-layout>
-    <p>home-page works!</p>
-    <!-- <a routerLink="auth/login">Go To Login</a> Tekrar Yükleme Yapıyor -->
-    <a routerLink="auth/login">Go To Login</a>
+
+    <div class="text-center py-3">
+        <h1>Hoş Geldiniz!</h1>
+        <small>En İyi Fiyatlı Ürün Garantisi!</small>
+    </div>
+
+    <!-- <a routerLink="auth/login">Go To Login</a> Tekrar Yükleme Yapıyor
+    <a routerLink="auth/login">Go To Login</a> -->
+    <div class="row">
+        <div class="col-3">
+            <h3 class="text-primary">Categories</h3>
+            <app-category-list-goup></app-category-list-goup>
+        </div>
+    </div>
 </app-basic-layout>
