--- a/src/app/routes/home-page/home-page.component.html
+++ b/src/app/routes/home-page/home-page.component.html
@@ -12,5 +12,9 @@
             <h3 class="text-primary">Categories</h3>
             <app-category-list-goup></app-category-list-goup>
         </div>
+        <div class="col-9 ">
+            <h3 class="text-success">Products</h3>
+            <app-product-card-list class="d-flex flex-wrap gap-3"></app-product-card-list>
+        </div>
     </div>
 </app-basic-layout>
