--- a/src/app/shared/components/basic-layout/basic-layout.component.html
+++ b/src/app/shared/components/basic-layout/basic-layout.component.html
@@ -3,7 +3,7 @@
         <app-navbar></app-navbar>
     </header>
 
-    <main class="flex-grow-1 container">
+    <main class="flex-grow-1 container py-2">
         <ng-content></ng-content>
     </main>
 
