--- a/src/app/features/products/components/product-card-list/product-card-list.component.html
+++ b/src/app/features/products/components/product-card-list/product-card-list.component.html
@@ -1,4 +1,4 @@
-@for (product of productList; track $index) {
+@for (product of filteredProductList; track $index) {
 <app-card-list class="product-card-list" [title]="product.name" [description]="product.description"
     [imageUrl]="product.imageUrl" [buttonLabel]="product.price + ' TL' "></app-card-list>
 }
