--- a/src/app/routes/home-page/home-page.component.html
+++ b/src/app/routes/home-page/home-page.component.html
@@ -10,11 +10,12 @@
     <div class="row">
         <div class="col-3">
             <h3 class="text-primary">Categories</h3>
-            <app-category-list-goup></app-category-list-goup>
+            <app-category-list-goup (changeSelect)="onChangeSelectCategory($event)"></app-category-list-goup>
         </div>
         <div class="col-9 ">
             <h3 class="text-success">Products</h3>
-            <app-product-card-list class="d-flex flex-wrap gap-3"></app-product-card-list>
+            <app-product-card-list class="d-flex flex-wrap gap-3"
+                [filterByCategoryId]="seletectedCategory?.id ?? null"></app-product-card-list>
         </div>
     </div>
 </app-basic-layout>
